--- a/filebeat/config/filebeat.yml
+++ b/filebeat/config/filebeat.yml
@@ -5,11 +5,18 @@ filebeat.autodiscover:
 
 processors:
   - add_cloud_metadata: ~
+  
+  - decode_json_fields:
+      fields: ["message"]
+      target: "json"
+      overwrite_keys: true
 
 output.elasticsearch:
   hosts: ['http://elasticsearch:9200']
   username: elastic
   password: ${ELASTIC_PASSWORD}
+  indices:
+    - index: "filebeat-%{+yyyy.MM.dd}"
 
 http.enabled: true
 http.host: 0.0.0.0
